--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">11st_Application</string>
+    <string name="app_name">FinalProject_20173049</string>
 </resources>
